--- a/app/src/main/res/layout/layout_team_member_view.xml
+++ b/app/src/main/res/layout/layout_team_member_view.xml
@@ -2,23 +2,23 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:background="?selectableItemBackground"
+ android:id="@+id/bg"
+ android:layout_marginTop="4dp"
   android:orientation="vertical">
 
   <RelativeLayout
     android:layout_width="match_parent"
     android:paddingHorizontal="24dp"
     android:paddingVertical="16dp"
+    android:background="?selectableItemBackground"
     android:layout_height="wrap_content">
-
-    <com.google.android.material.imageview.ShapeableImageView
+<com.google.android.material.imageview.ShapeableImageView
       android:id="@+id/avatar"
-      android:layout_width="40dp"
-      android:layout_height="40dp"
+      android:layout_width="55dp"
+      android:layout_height="55dp"
       android:layout_centerVertical="true"
       android:layout_marginEnd="20dp"
       app:shapeAppearance="@style/Theme.Sparkles.CircleImageView" />
-
     <TextView
       android:id="@+id/name"
       android:layout_width="wrap_content"
@@ -26,6 +26,7 @@
       android:layout_toEndOf="@id/avatar"
       android:layout_alignParentTop="true"
       android:textColor="?colorOnSurface"
+      android:layout_marginTop="4dp"
       android:textSize="18sp"
       android:textStyle="bold" />
 
