--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,13 +15,13 @@
     </style>
 
     <style name="TextAppearance.Sparkles.CollapsingToolbar.Collapsed" parent="TextAppearance.Material3.TitleLarge">
-        <item name="fontFamily">@font/afacadfluxregular</item>
-        <item name="android:fontFamily">@font/afacadfluxregular</item>
+        <item name="fontFamily">@font/nunito</item>
+        <item name="android:fontFamily">@font/nunito</item>
     </style>
 
     <style name="TextAppearance.Sparkles.CollapsingToolbar.Expanded" parent="TextAppearance.Material3.HeadlineMedium">
-        <item name="fontFamily">@font/afacadfluxregular</item>
-        <item name="android:fontFamily">@font/afacadfluxregular</item>
+        <item name="fontFamily">@font/nunitob</item>
+        <item name="android:fontFamily">@font/nunitob</item>
     </style>
     
     <!--this code was imported from Rikka Apps' shizuku-->
