--- a/app/src/main/res/drawable/bg_shape_round.xml
+++ b/app/src/main/res/drawable/bg_shape_round.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="?colorPrimaryContainer"/>
-    <corners android:radius="30dp"/>
+    <solid android:color="?colorSurfaceContainer"/>
+    <corners android:radius="21dp"/>
 </shape>
