--- a/app/src/main/res/layout/activity_appearance.xml
+++ b/app/src/main/res/layout/activity_appearance.xml
@@ -55,23 +55,22 @@
                  android:id="@+id/linear2">
 
                 <LinearLayout
-                     android:layout_height="390dp"
+                     android:layout_height="310dp"
                      android:layout_width="wrap_content"
                      android:orientation="vertical"
-                     android:paddingStart="4dp"
-                     android:paddingEnd="4dp"
+                     android:paddingStart="8dp"
+                     android:paddingEnd="8dp"
                      android:gravity="center_horizontal"
                      android:background="@drawable/bg_shape_round"
-                     android:layout_margin="14dp"
-                     android:paddingVertical="14dp"
-                     android:paddingBottom="14dp"
-                     android:paddingHorizontal="14dp"
-                     android:paddingTop="14dp"
+                     android:layout_margin="8dp"
+                     android:paddingVertical="8dp"
+                     android:paddingBottom="8dp"
+                     android:paddingTop="8dp"
                      android:id="@+id/linear10">
 
                     <LinearLayout
                          android:layout_height="290dp"
-                         android:layout_width="160dp"
+                         android:layout_width="150dp"
                          android:background="@drawable/ts_bg"
                          android:orientation="vertical"
                          android:id="@+id/linear4">
@@ -109,21 +108,12 @@
 
                     </LinearLayout>
 
-                    <TextView
-                         android:layout_height="wrap_content"
-                         android:layout_width="wrap_content"
-                         android:textSize="28dp"
-                         android:textColor="?colorOnSurface"
-                         android:layout_marginTop="14dp"
-                         android:id="@+id/textview1"
-                         android:text="System" />
-
                 </LinearLayout>
 
                 <LinearLayout
                      android:layout_height="match_parent"
                      android:layout_width="match_parent"
-                     android:gravity="center_horizontal"
+                     android:gravity="center"
                      android:padding="8dp"
                      android:orientation="vertical"
                      android:layout_marginTop="0dp"
@@ -134,6 +124,7 @@
                          android:layout_width="match_parent"
                          android:padding="9dp"
                          android:textSize="14sp"
+                         android:gravity="center"
                          android:text="@string/apper_uimode" />
 
                     <com.google.android.material.button.MaterialButtonToggleGroup
@@ -141,7 +132,7 @@
                          android:layout_width="match_parent"
                          android:gravity="center_horizontal|center_vertical"
                          app:singleSelection="true"
-                         android:padding="8dp"
+                         android:padding="4dp"
                          android:orientation="vertical"
                          app:selectionRequired="true"
                          android:id="@+id/linear5">
@@ -151,7 +142,7 @@
                              android:layout_width="wrap_content"
                              android:gravity="center_horizontal|center_vertical"
                              android:textSize="18sp"
-                             style="@style/Widget.Material3.Button.OutlinedButton"
+                             style="@style/Widget.Material3.Button.ElevatedButton"
                              android:checked="true"
                              android:id="@+id/materialbutton1"
                              android:text="Light" />
@@ -161,7 +152,7 @@
                              android:layout_width="wrap_content"
                              android:gravity="center_horizontal|center_vertical"
                              android:textSize="18sp"
-                             style="@style/Widget.Material3.Button.OutlinedButton"
+                             style="@style/Widget.Material3.Button.ElevatedButton"
                              android:id="@+id/materialbutton2"
                              android:text="Dark" />
 
@@ -170,7 +161,7 @@
                              android:layout_width="wrap_content"
                              android:gravity="center_horizontal|center_vertical"
                              android:textSize="18sp"
-                             style="@style/Widget.Material3.Button.OutlinedButton"
+                             style="@style/Widget.Material3.Button.ElevatedButton"
                              android:id="@+id/materialbutton3"
                              android:text="Auto" />
 
