--- a/app/src/main/res/layout/activity_appearance.xml
+++ b/app/src/main/res/layout/activity_appearance.xml
@@ -142,7 +142,7 @@
                              android:layout_width="wrap_content"
                              android:gravity="center_horizontal|center_vertical"
                              android:textSize="18sp"
-                             style="@style/Widget.Material3.Button.ElevatedButton"
+                             style="@style/Widget.Material3.Button.OutlinedButton"
                              android:checked="true"
                              android:id="@+id/materialbutton1"
                              android:text="Light" />
@@ -152,7 +152,7 @@
                              android:layout_width="wrap_content"
                              android:gravity="center_horizontal|center_vertical"
                              android:textSize="18sp"
-                             style="@style/Widget.Material3.Button.ElevatedButton"
+                             style="@style/Widget.Material3.Button.OutlinedButton"
                              android:id="@+id/materialbutton2"
                              android:text="Dark" />
 
@@ -161,7 +161,7 @@
                              android:layout_width="wrap_content"
                              android:gravity="center_horizontal|center_vertical"
                              android:textSize="18sp"
-                             style="@style/Widget.Material3.Button.ElevatedButton"
+                             style="@style/Widget.Material3.Button.OutlinedButton"
                              android:id="@+id/materialbutton3"
                              android:text="Auto" />
 
