fix: webview not taking full space

--- a/app/src/main/res/layout/activity_html_viewer.xml
+++ b/app/src/main/res/layout/activity_html_viewer.xml
@@ -25,14 +25,15 @@
         android:id="@+id/nested_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        android:fillViewport="true">
+        
         <WebView
-         android:layout_height="match_parent"
-         android:layout_width="match_parent"
-         android:id="@+id/webview"/>
-
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </androidx.core.widget.NestedScrollView>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
